tests/negative/char_var_concat.far
fun main() -> i64 {
  c: char = 0
  s = "a" + c + "b"
  return 0
}
